chore: 로컬/운영 환경 분리를 포함한 초기 개발 환경 세팅
- Spring Boot 기본 프로젝트 구조 설정
- local / prod 환경 분리 (application-local.yml, application-prod.yml)
- Docker 기반 로컬 테스트용 MySQL 및 SFTP 모킹 환경 구성
- 민감 정보 보호를 위해  gitignore 처리
- 빌드 및 실행 환경 검증 완료

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
-
+# local config (do not commit)
+src/main/resources/application-prod.yml
 ### VS Code ###
 .vscode/
