--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,31 @@ repositories {
 }
 
 dependencies {
+
+// 1. Web & Integration Core
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
-	implementation 'org.springframework.boot:spring-boot-starter-restclient'
-	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.springframework.integration:spring-integration-http'
+	implementation 'org.springframework.integration:spring-integration-jdbc'
+	implementation 'org.springframework.integration:spring-integration-sftp'
+
+	// 2. Data & Validation
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml' // XML 파싱용
+
+	// 3. Database Drivers
+	runtimeOnly 'com.mysql:mysql-connector-j'           // 로컬용 (MySQL)
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'      // 시연용 (Oracle)
+	runtimeOnly 'com.h2database:h2'                    // 테스트용 (H2)
+
+	// 4. Utils
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	implementation 'org.apache.commons:commons-lang3'
+
+	// 5. Testing
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.integration:spring-integration-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
