feat: 시나리오 1 실시간 주문 연계 및 SFTP 전송 기능 구현
- [Sender] XML 주문 데이터 수신을 위한 REST API 및  DTO 설계

- [Policy] 동시성 보장을 위한 AtomicInteger 기반 ID 구현

- [Mapper] Hash Join 방식을 활용한 XML to DB Flat Entity 매핑 최적화

- [Repository] NamedParameterJdbcTemplate을 사용한 Batch Insert 적재 로직 구현

- [SFTP] Spring Integration SFTP를 활용한 영수증 파일 생성 및 메모리 기반 전송 로직 구현

- [Config] 서비스 기동 시 DB 시퀀스 조회를 통한 ID Generator 초기화 자동화

- [Transaction] DB 적재와 SFTP 전송 간 원자성 보장을 위한 트랜잭션 설정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,8 +4,12 @@ spring:
     url: jdbc:mysql://localhost:3306/inspien_db?serverTimezone=UTC
     username: root
     password: root
+    order-table: ORDER_TB      # 주문 테이블 (Source 역할)
+    shipment-table: SHIPMENT_TB # 운송 테이블 (Target 역할)
 
-# 로컬 SFTP 모킹 환경 (Docker용)
+  database:
+    order-table: ORDER_TB
+    shipment-table: SHIPMENT_TB
 sftp:
   host: localhost
   port: 2222
